# website

./: .env  .gitignore  Cargo.toml  LICENSE  readme.md
data/: about.md  example.md
src/: config.rs  file_utils.rs  html_generator.rs  lib.rs  main.rs
webpage/: main.css  mobile.css
