[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.0"
glob = "0.3.0"
notify = "6.1.1"
chrono = "0.4.31"
dotenv = "0.15.0"
anyhow = "1.0.91"

[lib]
name = "website"
path = "src/lib.rs"